fix(framework): 完成 2.1 升级后的稳定性修复
收敛认证、RPC、消息、MongoDB、自动配置与中间件脚本行为，补充针对性回归测试。

整理活动文档并归档过时资料，同步升级兼容性和验证记录。